--- a/To-do-List/index.html
+++ b/To-do-List/index.html
@@ -7,6 +7,14 @@
     <title>To-do-List</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="todo-app">
+            <h2>To-Do List <img src="images/icon.png" alt="icon"></h2>
+            <div class="row">
+                <input type="text" id="input-box" placeholder="Add your text!">
+                <button>Add</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
